force-app/main/default/objects/Campaign_Member_Status__mdt/Campaign_Member_Status__mdt.object-meta.xml
<CustomObject>
    <label>Campaign Member Status</label>
    <pluralLabel>Campaign Member Status</pluralLabel>
</CustomObject>