force-app/main/default/objects/Campaign_Member_Status__mdt/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
                <default>true</default>
                <label>Global</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>