force-app/main/default/objects/Campaign_Member_Status__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>