force-app/main/default/objects/Campaign_Member_Status__mdt/fields/Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Name__c</fullName>
    <label>Record Type Developer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
                <default>true</default>
                <label>Global</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>