force-app/main/default/objects/Campaign_Member_Status__mdt/fields/Responded__c.field-meta.xml
<CustomField>
    <fullName>Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responded</label>
    <type>Checkbox</type>
</CustomField>