force-app/main/default/objects/Campaign_Member_Status__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Campaign_Type__c</columns>
    <columns>Record_Type_Developer_Name__c</columns>
    <columns>Responded__c</columns>
    <columns>Is_Default__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>